--- a/Substation Builder/Pages/DatabaseView/BreakerPage.xaml
+++ b/Substation Builder/Pages/DatabaseView/BreakerPage.xaml
@@ -61,11 +61,9 @@
             </Style>
 
         </StackPanel.Resources>
-        
 
-        <StackPanel>
-            <Label Content="Circuit Breaker" Width="Auto" HorizontalContentAlignment="Center" FontSize="20"/>
 
+        <StackPanel Margin="10">
             <DockPanel>
                 <Label Content="Name:"/>
                 <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
