--- a/Substation Builder/Pages/DatabaseView/SubstationPage.xaml
+++ b/Substation Builder/Pages/DatabaseView/SubstationPage.xaml
@@ -15,47 +15,93 @@
             <EventTrigger RoutedEvent="FrameworkElement.Loaded">
                 <BeginStoryboard>
                     <Storyboard>
-                        <DoubleAnimation Duration="0:0:0.7" Storyboard.TargetProperty="Opacity" From="0" To="1" />
+                        <DoubleAnimation Duration="0:0:1" Storyboard.TargetProperty="Opacity" From="0" To="1" />
                     </Storyboard>
                 </BeginStoryboard>
             </EventTrigger>
         </StackPanel.Triggers>
 
-        <StackPanel>
-            <Label Content="Substation Data" Opacity="0.9" FontSize="22" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+        <StackPanel.Resources>
+
+            <Style TargetType="{x:Type Label}">
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="Background" Value="#2d2d2d"/>
+                <Setter Property="Opacity" Value="0.85"/>
+                <Setter Property="Margin" Value="5,0,5,5"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                <Setter Property="VerticalAlignment" Value="Stretch"/>
+                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                <Setter Property="Width" Value="110"/>
+            </Style>
+
+            <Style TargetType="{x:Type TextBox}">
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="Background" Value="#2d2d2d"/>
+                <Setter Property="Opacity" Value="0.85"/>
+                <Setter Property="Margin" Value="0,0,5,5"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                <Setter Property="VerticalAlignment" Value="Stretch"/>
+                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                <Setter Property="Width" Value="165"/>
+                <Setter Property="Background" Value="Black"/>
+                <Setter Property="Padding" Value="5,0,0,0"/>
+            </Style>
+
+            <Style TargetType="{x:Type ComboBox}" BasedOn="{StaticResource {x:Type ComboBox}}">
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="Opacity" Value="0.85"/>
+                <Setter Property="Margin" Value="0,0,5,5"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                <Setter Property="VerticalAlignment" Value="Stretch"/>
+                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                <Setter Property="Width" Value="165"/>
+                <Setter Property="Background" Value="Black"/>
+            </Style>
+
+        </StackPanel.Resources>
+
+        <StackPanel Margin="10">
 
             <DockPanel>
-                <Label Content="Substation Name:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Center" Width="135" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,5,0"/>
-                <TextBox Text="{Binding Project.Name, UpdateSourceTrigger=PropertyChanged}" Margin="0,7,4,1" Opacity="0.9" FontSize="16" Width="175" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+                <Label Content="Sub Name:"/>
+                <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
             </DockPanel>
             <DockPanel>
-                <Label Content="Substation Type:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" Width="135" HorizontalAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,5,0"/>
-                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:SubType}}}" SelectedValue="{Binding Project.SubType}" Width="175" FontSize="16" Margin="0,7,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+                <Label Content="Sub Type:"/>
+                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:SubType}}}" SelectedValue="{Binding SubType}" />
             </DockPanel>
             <DockPanel>
-                <Label Content="Bus Type:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" Width="135" HorizontalAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Center" Padding="0,0,5,0"/>
-                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:BusType}}}" SelectedValue="{Binding Project.BusType}" Width="175" FontSize="16" Margin="0,7,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+                <Label Content="Bus Type:"/>
+                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:BusType}}}" SelectedValue="{Binding BusType}"/>
             </DockPanel>
             <DockPanel>
-                <Label Content="High Side PT:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" Width="135" HorizontalAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,5,0"/>
-                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:PTR}}}" SelectedValue="{Binding Project.HighPT}" Width="85" FontSize="16" Margin="0,7,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:ConnectionType}}}" SelectedValue="{Binding Project.HighPTCon}" Width="85" FontSize="16" HorizontalContentAlignment="Center" Margin="5,7,0,0" HorizontalAlignment="Left"/>
+                <Label Content="High Side PT:"/>
+                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:PTR}}}" SelectedValue="{Binding HighPTR}" Width="80" />
+                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:ConnectionType}}}" SelectedValue="{Binding HighPTCon}" Width="80"/>
             </DockPanel>
             <DockPanel>
-                <Label Content="Low Side PT:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" Width="135" HorizontalAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,5,0"/>
-                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:PTR}}}" SelectedValue="{Binding Project.LowPT}" Width="85" FontSize="16" Margin="0,7,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:ConnectionType}}}" SelectedValue="{Binding Project.LowPTCon}" Width="85" FontSize="16" HorizontalContentAlignment="Center" Margin="5,7,0,0" HorizontalAlignment="Left"/>
+                <Label Content="Low Side PT:"/>
+                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:PTR}}}" SelectedValue="{Binding LowPTR}" Width="80"/>
+                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:ConnectionType}}}" SelectedValue="{Binding LowPTCon}" Width="80"/>
+            </DockPanel>
+            <DockPanel>
+                <Label Content="High Side:"/>
+                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Voltage}}}" SelectedValue="{Binding HighVoltage}"/>
+            </DockPanel>
+            <DockPanel>
+                <Label Content="Low Side:"/>
+                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Voltage}}}" SelectedValue="{Binding LowVoltage}"/>
             </DockPanel>
 
-            <DockPanel>
-                <Label Content="High Side Voltage:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Center" Width="135" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,5,0"/>
-                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Voltage}}}" SelectedValue="{Binding Project.HighVoltage}" Width="100" FontSize="16" Margin="0,7,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-            </DockPanel>
-
-            <DockPanel>
-                <Label Content="Low Side Voltage:" HorizontalContentAlignment="Right" Margin="0,5,0,1" Opacity="0.9" FontSize="16" HorizontalAlignment="Center" Width="135" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,5,0"/>
-                <ComboBox ItemsSource="{Binding Source={EnumHelper:EnumBindingSource {x:Type model:Voltage}}}" SelectedValue="{Binding Project.LowVoltage}" Width="100" FontSize="16" Margin="0,7,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-            </DockPanel>
+            <StackPanel>
+                <TextBox FontFamily="pack://application:,,,/Resources/Icons/#Exocet" Background="{x:Null}" Text="{Binding Engineer, UpdateSourceTrigger=PropertyChanged}" 
+                         HorizontalContentAlignment="Stretch" Width="Auto" BorderBrush="{x:Null}" FontSize="16"/>
+                <TextBox FontFamily="pack://application:,,,/Resources/Icons/#Exocet" Background="{x:Null}" Text="{Binding Engineer, UpdateSourceTrigger=PropertyChanged}" 
+                         HorizontalContentAlignment="Stretch" Width="Auto" BorderBrush="{x:Null}" FontSize="16"/>
+            </StackPanel>
         </StackPanel>
 
     </StackPanel>
